@@ -1,6 +1,8 @@
 * 1.9.7
 	* New features:
 		- Support slaveof command(2018-04-27)
+	* Bug fixes:
+		- Fix logrotate issue when log to stdout/stderr(2018-06-05)
 * 1.9.6
 	* New features:
 		- ssdb-cli supports command history(2018-04-24)
